# pelecan

./: .gitignore  README.md  compile.sh  run_pelecan.sh  server_configuration.md  setup.sh  writing_modules.md
defaults/: Cargo.toml  config  data.rs  main.rs  persistent_trait.rs  server.rs
