[package]
name = "pelecan"
version = "0.1.0"
authors = ["chili-b <dexter.gaonshatford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmur_grpc = "0.3.3"
confy = "0.4.0"
dirs = "3.0.1"
serde = "^1.0"
serde_derive = "^1.0"

# DEPENDENCIES
