[package]
name = "pelecan"
version = "0.1.0"
authors = ["chili-b"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.2"
murmur_grpc = "2.0.6"
confy = "0.4.0"
dirs = "3.0.1"
serde = "^1.0"
serde_derive = "^1.0"

# DEPENDENCIES
